--- a/client/package.json
+++ b/client/package.json
@@ -16,7 +16,8 @@
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.11.1",
     "redux": "^4.2.1",
-    "redux-thunk": "^2.4.2"
+    "redux-thunk": "^2.4.2",
+    "sass": "^1.69.5"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
