--- a/server/.env
+++ b/server/.env
@@ -1,11 +1,9 @@
 #Server
 PORT=3001
 
-# API
-API_KEY=
-
 # DataBase
 DB_USER=postgres
 DB_PASSWORD=admin
 DB_HOST=localhost:5432
 DB_NAME=drivers
+DB_DEPLOY=postgresql://postgres:3fEBE-b55dcDafb661*6gegca1E-ceCC@monorail.proxy.rlwy.net:14155/railway
