--- a/client/.env
+++ b/client/.env
@@ -1,3 +1,3 @@
 #Server
 # VITE_URL_SERVER=http://localhost:3001
-VITE_URL_SERVER=pidrivers.up.railway.app
+VITE_URL_SERVER=https://pidrivers.up.railway.app
