--- a/server/.env
+++ b/server/.env
@@ -2,8 +2,5 @@
 PORT=3001
 
 # DataBase
-DB_USER=postgres
-DB_PASSWORD=admin
-DB_HOST=localhost:5432
-DB_NAME=drivers
-DB_DEPLOY=postgresql://postgres:3fEBE-b55dcDafb661*6gegca1E-ceCC@monorail.proxy.rlwy.net:14155/railway
+# DB=postgres://postgres:admin@localhost:5432/drivers
+DB=postgresql://postgres:3fEBE-b55dcDafb661*6gegca1E-ceCC@monorail.proxy.rlwy.net:14155/railway
